--- a/index.html
+++ b/index.html
@@ -12,19 +12,39 @@
 </head>
 <body>
     <header>
-        Header Content
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <section>
         Main Image
     </section>
+
     <section>
         Club Ethos
     </section>
+
     <section>
         Running locations, distances and times
     </section>
+
     <footer>
         social links here
     </footer>
+
 </body>
 </html>
